--- a/SourceCode/Framework/JamomaModular.xcconfig
+++ b/SourceCode/Framework/JamomaModular.xcconfig
@@ -11,7 +11,7 @@
 
 // Name & Version
 PRODUCT_NAME = $(PROJECT_NAME)
-PRODUCT_VERSION = 0.1.1
+PRODUCT_VERSION = 0.6.0.0
 SVNREV = $Rev$
 
 
@@ -25,8 +25,9 @@ INSTALL_PATH = /
 // Special Files
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
-HEADER_SEARCH_PATHS = $(inherited) "$(SRCROOT)/../../Foundation/library/includes" "$(SRCROOT)/../../DSP/library/includes"
-LIBRARY_SEARCH_PATHS = $(inherited)
+HEADER_SEARCH_PATHS = $(inherited) "$(SRCROOT)/../../../../Tools/library/max-sdk/c74support/**" "$(SRCROOT)/../../../Foundation/library/includes" "$(SRCROOT)/../../../DSP/library/includes" "$(SRCROOT)/../../../Multicore/library/includes"
+LIBRARY_SEARCH_PATHS = $(inherited) 
+FRAMEWORK_SEARCH_PATHS = $(inherited) "$(SRCROOT)/../../../../Tools/library/max-sdk/c74support/**"
 
 // Per architecture and deployment settings
 SDKROOT[arch=i386] = /Developer/SDKs/MacOSX10.5.sdk
