--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "Modules/Foundation"]
 	path = Modules/Foundation
 	url = git://github.com/tap/JamomaFoundation.git
-[submodule "Publications"]
-	path = Publications
+[submodule "Modules/Publications"]
+	path = Modules/Publications
 	url = git://github.com/tap/JamomaPublications.git
