Trying to fix the building of DSP on Windows. Can't load JamomaFondation.lib

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
-*/build
-*/*/build
-*/*/*/build
-*/Build_Mac
+logs
+build
+Build_Mac
+html
+Debug
+Release
+obj
+bin
 *.mode1v3
 *.pbxuser
 vstsdk-2.4
-logs
 *.so
-obj
-bin
 *.depend
 *.layout
-html
+*.map
+*.ncb
+*.suo
+*.user
