--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 Jamoma/library/externals/mac/
 logs
 build
+html
+Debug
+Release
 *.mode1v3
 *.pbxuser
+*.layout
+*.depends
+*.map
+*.ncb
+*.suo
+*.user
