--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "UserLib/Jamoma.Ircam.Spat"]
 	path = UserLib/Jamoma.Ircam.Spat
 	url = git://github.com/lossius/Jamoma.Ircam.Spat.git
+[submodule "Tools/testlib/rosc"]
+	path = Tools/testlib/rosc
+	url = git://github.com/tap/rosc.git
