Adding new UserLib Jamoma.Ircam.IMTR

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "Tools/testlib/rosc"]
 	path = Tools/testlib/rosc
 	url = git://github.com/tap/rosc.git
+[submodule "UserLib/Jamoma.Ircam.IMTR"]
+	path = UserLib/Jamoma.Ircam.IMTR
+	url = git://github.com/lossius/Jamoma.Ircam.IMTR
